--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,9 @@ phases:
       
   pre_build:
     commands:
-      -  sudo apt-get install zip
-      -  sudo apt-get install unzip
-      -  sudo apt-get install libncurses5
+      -  apt-get install zip
+      -  apt-get install unzip
+      -  apt-get install libncurses5
       
   build:
     commands:
