--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,9 @@ phases:
       
   build:
     commands:
-      - bash prova.sh
-      #- lunch rpi4-eng
-      #- make ramdisk systemimage vendorimage -jx
+      - source build/envsetup.sh
+      - lunch rpi4-eng
+      - make ramdisk systemimage vendorimage -j8
 
   post_build:
     commands:
